# scraping

./: .gitignore  ARMENIAN_QUICK_REFERENCE.md  CHANGELOG.md  DOCUMENTATION_INDEX.md  FUTURE_IDEAS.md  GIT_MERGE_GUIDE.md  MIGRATION_MONITORING_WINDOW.md  PROJECT_ASSESSMENT.md  PR_A_PHASE2_CI_CUTOVER.md  README.md  SENTENCE_PROGRESSION.md  STEP5_CLEANUP_PLAN.md  STEP6_FINAL_SIGNOFF.md  VOCABULARY_ORDERING_GUIDE.md  WA_CORPUS_SOURCES.md  _pull_anki_data.py  _test_html_extract.py  exloration.ipynb  extract_image_text_simple.py  generate_anki_cards.py  main_coordinator.py  pyproject.toml  requirements.txt  test_card_generator.py  test_database.py  test_date_extraction.py  test_detect_irregular.py  test_expanded_verbs.py  test_integration.py  test_irregular_quick.py  test_phrase_wiring.py
.github/: copilot-instructions.md  pull_request_template.md
.github/workflows/: extraction_pipeline.yml
01-docs/: NAME-HISTORY.md  PROJECT-RESTRUCTURING.md  REBRANDING.md  SESSION-SUMMARY.md  corpus-sources.md  logging.md
01-docs/development/: GIT_READY_FOR_MERGE.md  NEXT_SESSION_INSTRUCTIONS.md
01-docs/guides/: SENTENCE_PROGRESSION_IMPLEMENTATION.md
01-docs/references/: CLASSICAL_ORTHOGRAPHY_GUIDE.md  WESTERN_ARMENIAN_PHONETICS_GUIDE.md
02-src/lousardzag/: __init__.py  anki_connect.py  api.py  card_generator.py  config.py  core_adapters.py  database.py  fsrs.py  letter_data.py  ocr_vocab_bridge.py  phonetics.py  preview.py  progression.py  renderer.py  sentence_generator.py  sentence_progression.py  stemmer.py
02-src/wa_corpus/: __init__.py  __main__.py  build_corpus.py  frequency_aggregator.py  ia_scraper.py  nayiri_scraper.py  newspaper_scraper.py  tokenizer.py  wa_classifier.py  wiki_processor.py
03-cli/: generate_cards.py  preview_server.py  pull_anki_data.py  start_server.py
04-tests/: conftest.py  test_card_generator.py  test_integration.py  test_sentence_progression.py
05-config/: logging_config.py
06-notebooks/: demo_component_analysis.py
07-tools/: INDEX.txt  _extract_wa_sources.py  analyze_unmatched_fallbacks.py  audit_vocabulary_prerequisites.py  clean_anki_export.py  export_unmatched_report.py  extract_anki_words_clean.py  extract_image_text.py  extract_vocabulary_words.py  generate_ordered_cards.py  map_frequency_to_vocab.py  ocr_setup_check.py  report_unmatched_reasons.py  scrape_fb_images.py  test_phonetics.py  test_vocab_tracking.py  validate_word_mappings.py
08-data/: CLEANUP_RESULTS.md  anki_words_cleaned.json  vocab_analysis_report.json  vocab_l1_core.csv  vocab_n_standard.csv  vocab_preset_l1.csv  vocab_preset_l2.csv  vocab_preset_l3.csv
armenian_anki/: __init__.py  anki_connect.py  card_generator.py  config.py  database.py  fsrs.py  ocr_vocab_bridge.py  progression.py  sentence_generator.py
cli/: generate_cards.py  preview_server.py  pull_anki_data.py
config/: logging_config.py
docs/: PROJECT-RESTRUCTURING.md  corpus-sources.md  logging.md
notebooks/: demo_component_analysis.py
tests/: conftest.py  test_card_generator.py
tools/: _extract_wa_sources.py  ocr_setup_check.py  scrape_fb_images.py
wa_corpus/: asbarez_scraper.py  build_corpus.py  frequency_aggregator.py  nayiri_scraper.py  newspaper_scraper.py  tokenizer.py  wa_classifier.py  wiki_processor.py  wikisource_processor.py
(+139 files in other folders)
