[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "lousardzag"
version = "0.2.0"
description = "Western Armenian language learning platform with morphology analysis and vocabulary progression"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "Lousardzag Contributors" }
]
license = { text = "MIT" }

dependencies = [
    "pandas>=1.3.0",
    "requests>=2.25.0",
    "selenium>=4.0.0",
    "fastapi>=0.112.0",
    "uvicorn>=0.30.0",
    "psutil>=5.8.0",
]

[project.optional-dependencies]
ocr = ["pytesseract>=0.3.10", "Pillow>=9.0.0"]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=22.0.0",
    "isort>=5.0.0",
    "mypy>=0.990",
]

[project.urls]
Repository = "https://github.com/yourusername/lousardzag"

[project.scripts]
lousardzag-generate-cards = "lousardzag.cli:generate_cards_main"
lousardzag-preview-server = "lousardzag.cli:preview_server_main"
lousardzag-pull-data = "lousardzag.cli:pull_data_main"
lousardzag-build-corpus = "wa_corpus.cli:build_corpus_main"

[tool.setuptools]
packages = ["lousardzag", "wa_corpus"]
package-dir = { "" = "02-src" }

[tool.setuptools.package-data]
lousardzag = ["templates/**/*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
addopts = "-v --tb=short"

[tool.black]
line-length = 100
target-version = ['py310']

[tool.isort]
profile = "black"
line_length = 100
skip_gitignore = true

[tool.mypy]
python_version = "3.10"
warn_return_any = true
ignore_missing_imports = true
